[package]
name = "wowp"
version = "0.1.0"
authors = ["ryan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6.2.1"
escape8259 = "0.5.0"
serde = { version = "1.0.115", features = ["derive"]}
serde_json = "1.0.57"
linereader = "0.4.0"
snafu = "0.6.9"
clap = "3.0.0-beta.4"
chrono = "0.4"
[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.3.2"

[profile.release]
opt-level = 3
lto = true